# settrade-feed-adapter

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  dispatcher.py  events.py  feed_health.py
docs/: README.md  glossary.md
docs/00_getting_started/: mental_model.md  quickstart.md  what_is_this.md
docs/01_system_overview/: architecture.md  data_flow.md  state_machines.md  threading_and_concurrency.md
docs/02_transport_mqtt/: authentication_and_token.md  client_lifecycle.md  reconnect_strategy.md  subscription_model.md
docs/03_adapter_and_normalization/: error_isolation_model.md  money_precision_model.md  normalization_contract.md  parsing_pipeline.md
docs/04_event_models/: best_bid_ask.md  event_contract.md  full_bid_offer.md  timestamp_and_epoch.md
docs/05_dispatcher_and_backpressure/: health_and_ema.md  overflow_policy.md  queue_model.md
docs/06_feed_liveness/: gap_semantics.md  global_liveness.md  per_symbol_liveness.md
docs/07_observability/: benchmark_guide.md  logging_policy.md  metrics_reference.md  performance_targets.md
docs/09_production_guide/: tuning_guide.md  (+2 more)
examples/: __init__.py  example_bidoffer.py  example_feed_health.py
infra/: __init__.py  settrade_adapter.py  settrade_mqtt.py
scripts/: benchmark_adapter.py  benchmark_compare.py  benchmark_parallel.py  benchmark_parallel_compare.py  benchmark_sdk.py  benchmark_utils.py  test_mqtt_connection.py
tests/: __init__.py  test_benchmark_utils.py  test_dispatcher.py  test_events.py  test_feed_health.py  test_settrade_adapter.py  test_settrade_mqtt.py
(+9 files in other folders)
