[project]
name = "settrade-feed-adapter"
version = "0.1.0"
description = "Market data ingestion layer for Settrade Open API with typed events and explicit control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "settrade-v2>=2.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
